Some search UI cleanup: * Remove two of three redundant instances of "Search" in the mini-form at the top of the page. * Compact things a bit at the top -- remove the fieldset, collapse a blank line in the paging area. * Include score info if provided (eg by Lucene) * Format the score/size/date line similarly to LuceneSearch ** but without hardcoding the color! * Format the list with bullets as with LuceneSearch ** but without hardcoding the padding! ** this allows us to skip deleted results without looking quite as weird * Skip line numbers in text extracts. Nobody cares and they clutter things up! LuceneSearch dropped them long ago. * Hardcode context extract lines to 2; old default of 5 is too many. May drop the preference. * Use more compact file info for image results * Hopefully fix click behavior for Ogg results * Include text extracts along with image results, if applicable. * There are still issues with vertical alignment of the bullet on image results. :(

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -89,3 +89,11 @@ p.mw-ipb-conveniencelinks, p.mw-filedelete-editreasons, p.mw-delete-editreasons 
 	font-size: 90%;
 	float: right;
 }
+
+/* Search results */
+.mw-search-results li {
+	padding-bottom: 1em;
+}
+.mw-search-result-data {
+	color: green;
+}
